# whiteboard-plotter

./: .gitignore  AGENTS.md  LICENSE
.devcontainer/: Dockerfile  devcontainer.json
assets/draw_library/: manifest.example.json
docs/: ARCHITECTURE_AUDIT.md  DRAWING_PATH_ADAPTER_DESIGN.md  FOUR_CABLE_KINEMATIC_PLUGIN.md  FOUR_CABLE_SMOKE_TEST.md  IMAGE_PIPELINE_PLAN.md  PROJECT_ROADMAP.md  README.md  SKETCH_CENTERLINE_PIPELINE.md  VOICE_COMMANDS_DEMO.md  canonical-first-ingestion.md  legacy-compatibility.md  primitive-transport.md  x_plotter_foundation.md
src/wall_climber/: package.xml  setup.py
src/wall_climber/config/: cable_robot.yaml  fastdds_no_shm.xml  x_plotter.yaml
src/wall_climber/docs/: README.md  x_plotter_foundation.md
src/wall_climber/fonts/: HersheySans1-LICENSE.txt
src/wall_climber/launch/: my_robot.launch.py  x_plotter_simulation.launch.py
src/wall_climber/test/: test_canonical_adapters.py  test_canonical_ingestion.py  test_canonical_optimizer.py  test_color_to_lineart.py  test_draw_library_endpoint.py  test_four_cable_kinematics.py  test_image_pipeline.py  test_image_pipeline_adapter.py  test_preview_cache_contract.py  test_shared_config.py  test_sketch_centerline_curve_fit.py  test_sketch_centerline_draw_endpoint.py  test_sketch_centerline_pipeline.py  test_sketch_centerline_preview_endpoint.py  test_sketch_pipeline_phase3_integration.py  test_stronger_sketch_quality.py  test_supervisor_rate_limit.py  test_tiny_detail_preservation.py  test_upload_routing.py  test_x_plotter_corexy.py  test_x_plotter_demo_paths.py  test_x_plotter_hygiene.py
src/wall_climber/urdf/: base_body.xacro  cable_supervisor.urdf.xacro  face_display_plugin.py  my_robot.urdf.xacro  robot_face_screen.xacro  simple_pen_mount.xacro  webots_face_display_device.txt  x_plotter_robot.urdf.xacro
src/wall_climber/wall_climber/: __init__.py  _debug_snapshots.py  _geometry_helpers.py  _http_helpers.py  _optimizer_geometry.py  _optimizer_merge.py  _stroke_helpers.py  _svg_helpers.py  _ttl_cache.py  _uploads_store.py  _webots_nav.py  cable_robot_plugin.py  cable_supervisor_plugin.py  cable_workspace.py  canonical_adapters.py  canonical_builders.py  canonical_ops.py  canonical_optimizer.py  canonical_path.py  canonical_tiny_details.py  face_display_plugin.py  four_cable_kinematics.py  image_routing.py  runtime_topics.py  shared_config.py  text_stick_font.py  text_vector_font.py  urdf_spawner.py  vector_pipeline.py  web_server.py
src/wall_climber/wall_climber/image_pipeline/: __init__.py  _bezier_fit.py  _filled_regions.py  _preprocess.py  _stroke_order.py  adapters.py  curve_fit.py  input_detection.py  sketch_centerline.py  svg_vector.py  types.py
src/wall_climber/wall_climber/image_pipeline/color_to_lineart/: __init__.py  local_outline.py
src/wall_climber/wall_climber/image_pipeline/color_to_sketch/: __init__.py  opencv_pencil.py
src/wall_climber/wall_climber/image_pipeline/vectorizers/: __init__.py  autotrace_centerline.py  base.py  potrace_backend.py  vtracer_backend.py
src/wall_climber/wall_climber/ingestion/: __init__.py  image.py  image_curve_fitting.py  svg.py  text.py  upload_routing.py
src/wall_climber/wall_climber/optimizers/: vpype_optimizer.py
src/wall_climber/wall_climber/x_plotter/: __init__.py  corexy_kinematics.py  demo_paths.py  frame_config.py  primitive_sampler.py  x_plotter_robot_plugin.py
src/wall_climber/web/: index.html
src/wall_climber/worlds/: wall_world.wbt  wall_world_basic.wbt  x_plotter_world.wbt
src/wall_climber_draw_body/: CMakeLists.txt  package.xml
src/wall_climber_draw_body/include/wall_climber_draw_body/: geometry_eval.hpp  geometry_sampling.hpp  geometry_types.hpp  transport_conversions.hpp
src/wall_climber_draw_body/src/: cable_draw_executor.cpp  geometry_eval.cpp  geometry_sampling.cpp  python_bindings.cpp  transport_conversions.cpp
src/wall_climber_draw_body/test/: test_geometry_kernel.cpp  test_transport_conversions.cpp
src/wall_climber_interfaces/: CMakeLists.txt  package.xml
src/wall_climber_interfaces/msg/: BoardPoint.msg  CableSetpoint.msg  DrawPlan.msg  DrawPolyline.msg  PathPrimitive.msg  PrimitivePathPlan.msg
