<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_climber</name>
  <version>0.0.0</version>
  <description>Two-cable Webots drawing robot package.</description>
  <maintainer email="2144934@std.hu.edu.jo">hisham</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>webots_ros2_msgs</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-skimage</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-multipart</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>
  <exec_depend>wall_climber_interfaces</exec_depend>
  <exec_depend>wall_climber_draw_body</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
